# georax

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/examples/: lie_group.py  solver_convergence.py  spd_sde_cfees25.py  sphere_gbm_so3.py  stochastic_convergence.py
georax/: __init__.py  _term.py  base.py  cf_ees25.py  cg2.py
georax/_geometry/: __init__.py  _charts.py  _lie_groups.py  base.py  euclidean.py  spd.py  spd_homogeneous.py  special_orthogonal.py
georax/_solver/: __init__.py  cf_ees25.py  cf_ees27.py  cg2.py  cg4.py  commutator_free.py  euler.py  rkmk.py  srkmk.py
tests/: conftest.py  test_benchmarks.py  test_commutator_free.py  test_geometric_euler.py  test_geometry_so_family.py  test_geometry_spd.py  test_geometry_spd_homogeneous.py  test_lie_group_ops.py  test_rkmk.py  test_solver_accuracy.py  test_srkmk.py
tests/benchmarks/: test_bench_charts.py  test_bench_exps.py  test_benchmarks.py
