[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "georax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.38",
    "diffrax>=0.7.1",
    "diffrax-lowstorage>=0.1.0",
]

[tool.uv.sources]
diffrax = { git = "https://github.com/sammccallum/diffrax", rev = "aeb1335b5a6278e85a270231e0f97b8db4453ae6" }
diffrax-lowstorage = {git = "https://github.com/luke-a-thompson/diffrax-lowstorage.git", rev = "6bca580732583a492742bc39dc4b65072c8427bf"}

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "fbm",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: slow compiled-memory benchmarks (opt-in via `-m benchmark`)",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
