[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[project]
name = "georax"
version = "0.1.0"
description = "Geometric ODE and SDE solvers for Diffrax"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Luke Thompson", email = "luke.thompson@sydney.edu.au" },
]
keywords = [
    "differential equations",
    "diffrax",
    "geometric integration",
    "jax",
    "lie groups",
    "manifolds",
    "numerical analysis",
    "ordinary differential equations",
    "scientific computing",
    "stochastic differential equations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "diffrax>=0.7.1",
    "diffrax-lowstorage>=0.1.0",
    "equinox>=0.13.0",
    "jax>=0.4.38",
    "jaxtyping>=0.3.0",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/luke-a-thompson/georax"
Repository = "https://github.com/luke-a-thompson/georax"
Issues = "https://github.com/luke-a-thompson/georax/issues"

[tool.uv.sources]
diffrax = { git = "https://github.com/sammccallum/diffrax", rev = "aeb1335b5a6278e85a270231e0f97b8db4453ae6" }
diffrax-lowstorage = { git = "https://github.com/luke-a-thompson/diffrax-lowstorage.git" }

[project.optional-dependencies]
dev = [
    "fbm",
    "lineax",
    "matplotlib",
    "pytest",
    "pytest-benchmark",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: slow compiled-memory benchmarks (opt-in via `-m benchmark`)",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
